--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -14,6 +14,31 @@ padding: 20px 10px;
 color: rgb(15, 13, 13);
 border: 3px solid rgb(36, 110, 194);
 }
+
+
+thead button {
+  border: 0;
+  border-radius: none;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: inherit;
+  padding: 0.5em;
+  margin-bottom: 1px;
+}
+
+thead button.ascending::after {
+  font-family: FontAwesome;
+  content: '👇';
+  display: inline-block;
+ 
+}
+
+thead button.descending::after {
+  content: '☝️';
+  display: inline-block;
+  
+}
+
     
 .item{
 
@@ -65,6 +90,13 @@ border: none;
 padding: 0.7em;
 }
 
+.create-item input[type=number]{
+  margin: 2.5em 2em;
+  width: 25%;
+  outline: none;
+  border: none;
+  padding: 0.7em;
+  }
 
 h1,
 p {
