Final version of application

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,14 @@
   color: #61dafb;
 }
 
+.heading {
+  font-size: 25px;
+}
+
+.p1 {
+  font-size: 14px;
+}
+
 .Image1 {
   margin-right: 4rem;
   margin-bottom: 20rem;
